Updates module.yaml with name and description

--- a/module.yaml
+++ b/module.yaml
@@ -1,6 +1,8 @@
-name: ""
+name: gitops-cp4ba-operator
 type: gitops
-description: ""
+description: >-
+  Module to populate a gitops repo with the resources to provision
+  cp4ba-operator
 tags:
   - tools
   - gitops
@@ -13,11 +15,11 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: ">= 1.1.0"
+            version: '>= 1.1.0'
       - id: namespace
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-namespace.git
-            version: ">= 1.0.0"
+            version: '>= 1.0.0'
     variables:
       - name: gitops_config
         moduleRef:
