--- a/chart/iaf-operator/values.yaml
+++ b/chart/iaf-operator/values.yaml
@@ -6,7 +6,7 @@ subscriptions:
   ibmautomation:
     #name: ibm-automation-foundation-core
     name: ibm-automation
-    namespace: gitops-cp-ban-operator
+    namespace: gitops-cp4ba-operator
     subscription:
       channel: v1.3
       installPlanApproval: Automatic
