Bug- Fixed : Removed static value for namespace (#4)
* Added IAF Operator charts

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Added recheck namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Added recheck namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Added  namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Added  namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Added  namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Commented Destroy

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Commented Destroy

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Uncommented Destroy

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* IAF Charts completed

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Uncommented Destroy

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* added namespace Variable

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* Update main.tf

* Update main.tf

* custom namespace

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* removed extra lines

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* changed value content

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* changed namespace value

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* changed namespace value

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* corrected values yaml

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* adding sleep to manually verify the installation

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.com>

* adding sleep to manually verify the installation

Signed-off-by: Dinesh C Pandey <dineshchandrapandey@in.ibm.c

--- a/module.yaml
+++ b/module.yaml
@@ -1,4 +1,4 @@
-name: cp4ba-iaf-operator
+name: iaf-operator
 type: gitops
 description: >-
   Module for gitops deployment of the CP4BA IBM Automation Foundation Operator.
